--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ canvas {
     z-index: 10;
 }
 
-.expressions {
+.expressions-container {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
